<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/acercade"
    android:orientation="vertical"
    tools:context="UI.Acerca_De">

    <TextView
        android:id="@+id/texto"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/acercadecont"
        android:textAlignment="center"
        android:textColor="#fff"
        android:textSize="30sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.365"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.045" />

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:contentDescription="@string/acercade"
        app:srcCompat="@mipmap/psicolog_foreground"
        tools:layout_editor_absoluteX="89dp"
        tools:layout_editor_absoluteY="96dp" />

    <TextView
        android:id="@+id/info"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="30sp"
        android:text="@string/info"
        android:textAlignment="center"
        android:textColor="#fff"
        android:textSize="24sp" />

    <TextView
        android:id="@+id/derechos"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="40sp"
        android:text="@string/derechos"
        android:textAlignment="center"
        android:textColor="#fff"
        android:textSize="24sp" />

    <TextView
        android:id="@+id/textView5"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="100sp"
        android:text="@string/creadores"
        android:textAlignment="center"
        android:textColor="#fff"
        android:textSize="24sp" />
</LinearLayout>