<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/fondfis"
    tools:context="UI.Test_Psicologico">

    <ScrollView
        android:id="@+id/scrollView2"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.0">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                android:id="@+id/pregunta1"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/pregF1"
                android:textColor="#000"
                android:textSize="20sp" />

            <RadioGroup
                android:id="@+id/P2"
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <RadioButton
                    android:id="@+id/P2R1"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/pF1r1"
                    android:textAppearance="@style/TextAppearance.AppCompat.Large"
                    android:textColor="#000"
                    android:textSize="20sp" />

                <RadioButton
                    android:id="@+id/P2R2"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/pF1r2"
                    android:textColor="#000"
                    android:textSize="20sp" />

                <RadioButton
                    android:id="@+id/P2R3"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/pF1r3"
                    android:textColor="#000"
                    android:textSize="20sp" />

                <RadioButton
                    android:id="@+id/P2R4"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/pF1r4"
                    android:textColor="#000"
                    android:textSize="20sp" />

            </RadioGroup>

            <Button
                android:id="@+id/siguiente1"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10sp"
                android:background="@drawable/botoncito"
                android:onClick="guardar"
                android:text="SIGUIENTE" />

            <Button
                android:id="@+id/reg1"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10sp"
                android:background="@drawable/botoncito"
                android:enabled="false"
                android:onClick="deshacer"
                android:text="REGRESAR" />

            <TextView
                android:id="@+id/peso"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="30sp"
                android:text="@string/peso"
                android:textAlignment="center"
                android:textColor="#000"
                android:textSize="18sp"
                android:textStyle="bold" />

            <EditText
                android:id="@+id/entpeso"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:ems="10"
                android:hint="@string/peso"
                android:inputType="numberDecimal"
                android:textAlignment="viewStart"
                android:textSize="18sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/talla"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/talla"
                android:textAlignment="center"
                android:textColor="#000"
                android:textSize="18sp"
                android:textStyle="bold" />

            <EditText
                android:id="@+id/enttalla"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:ems="10"
                android:hint="@string/talla"
                android:inputType="numberDecimal"
                android:textAlignment="viewStart"
                android:textSize="18sp"
                android:textStyle="bold" />

        </LinearLayout>
    </ScrollView>
</androidx.constraintlayout.widget.ConstraintLayout>