<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/images"
    tools:context="UI.Inicio">

    <Button
        android:id="@+id/testpsico"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@drawable/estiloboton"
        android:drawableTop="@drawable/imagen1"
        android:onClick="accionTestPsico"
        android:text="@string/testpsico"
        android:textColor="#fff"
        android:textSize="24sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.497"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.033" />

    <Button
        android:id="@+id/testfisico"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@drawable/estiloboton"
        android:drawableTop="@drawable/fisic"
        android:onClick="accionTestFisico"
        android:text="@string/testfisico"
        android:textColor="#fff"
        android:textSize="24sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.348" />

    <Button
        android:id="@+id/acercade"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@drawable/estiloboton"
        android:drawableTop="@drawable/informacion"
        android:onClick="accionTestAcercaDe"
        android:text="@string/acercade"
        android:textColor="#fff"
        android:textSize="24sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.945" />

    <Button
        android:id="@+id/progreso"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@drawable/estiloboton"
        android:drawableTop="@mipmap/admin_foreground"
        android:onClick="accionProgreso"
        android:text="@string/prog"
        android:textColor="#fff"
        android:textSize="24sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.635" />
</androidx.constraintlayout.widget.ConstraintLayout>