<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/res"
    android:orientation="vertical"
    tools:context="UI.Resultados">


    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical" >

            <TextView
                android:id="@+id/mensaje"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/puntaje"
                android:textColor="#000"
                android:textSize="18sp" />

            <TextView
                android:id="@+id/puntaje"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textAlignment="center"
                android:textColor="#000"
                android:textSize="46sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/otro"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10sp"
                android:textColor="#000"
                android:textSize="18sp" />

            <TextView
                android:id="@+id/recomendaciones"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10sp"
                android:textAlignment="viewStart"
                android:textColor="#000"
                android:textSize="18sp" />

            <TextView
                android:id="@+id/consecuencias"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textColor="#000"
                android:textSize="18sp" />

            <TextView
                android:id="@+id/ayuda"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/ayuda_unal"
                android:textColor="#000"
                android:textSize="18sp"
                tools:text="@string/ayuda_unal" />

            <Button
                android:id="@+id/volver"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="40sp"
                android:background="@drawable/botonesgen"
                android:onClick="inicio"
                android:text="@string/volver"
                android:textAlignment="center"
                android:textColor="#fff"
                android:textSize="18sp" />

            <Button
                android:id="@+id/estadisticas"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10sp"
                android:background="@drawable/botonesgen"
                android:onClick="misestad"
                android:text="@string/prog"
                android:textAlignment="center"
                android:textColor="#fff"
                android:textSize="18sp" />

        </LinearLayout>
    </ScrollView>

</LinearLayout>